--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@
 .line {
     border: 1px solid rgb(88, 206, 186);
     height: 80px;
+
 }
 
 /* section-3 */
@@ -149,7 +150,7 @@
 /* footer */
 
 footer {
-    height: 100px;
+    height: 80px;
     background-color: #202222;
     margin: auto;
     align-content: center;
@@ -175,6 +176,13 @@ footer {
     margin-right: 5px;
     padding-right: 5px;
     border-right: 1px solid white;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+.f-1-1{
+    padding-right: 10px;
 }
 
 /*  */
@@ -254,10 +262,11 @@ footer {
     footer{
         padding-top: 20px;
         padding-bottom: 20px;
+        font-size: 12px;
+
     }
     .f{
         height: auto;
-        font-size: 15px;
     
     }
     .f-1{
